Fixed BG getting cutoff and CSS margins

--- a/src/components/SignUp/signUpFormStyle.css
+++ b/src/components/SignUp/signUpFormStyle.css
@@ -2,14 +2,31 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 10;
+    padding: 8px;
     align-items: flex-start;
-    align-content: space-between;
-    height: 150px;
+    height: 100%;
     width: 430px;
-    margin: 20px;
+}
+.formSignUp{
+    border: 0;
+    margin-top: 5px;
+    display: inline-flex;
+    padding:0;
+    position: relative;
+    min-width: 0;
+    flex-direction: column;
 }
 
+#signUpInputBox{
+    border: 0cm;
+    margin: 0px;
+    display: inline-flex;
+    padding: 0%;
+    position: relative;
+    min-width: 0;
+    flex-direction: column;
+    vertical-align: top;
+}
 #submitButton{
     margin: 5px;
 }
